<resources>
    <string name="app_name">My Application</string>
    <string name="txt_hint_user">Username</string>
    <string name="txt_hint_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_rig">Register</string>
    <string name="date">19,November</string>
    <string name="btn_follow">FOLLOW</string>
    <string name="txt_follow">Following    100</string>
    <string name="txt_post">Posts    100</string>
    <string name="txt_followrs">Followers    100</string>
    <string name="txt_name">TAMER R ALNAUIZI</string>
    <string name="txt_wellcome">Wellcome at my profile, you can follow me now!</string>
    <string name="txt_like">Like</string>
    <string name="txt_share">Share</string>
    <string name="txt_comment">Comment</string>
</resources>
