<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:background="@drawable/imge_login_shape"
        android:layout_width="@dimen/login_imege"
        android:layout_height="@dimen/login_imege"
        android:padding="@dimen/login_padding"
        android:src="@drawable/man"
        />

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/user_margin"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_login_shape"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="@dimen/user_margin"
        android:hint="@string/txt_hint_user"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/user_margin"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_login_shape"
        android:drawableStart="@drawable/ic_locked_padlock"
        android:drawablePadding="@dimen/user_margin"
        android:hint="@string/txt_hint_pass"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp"

        >

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:text="@string/btn_rig" />
    </LinearLayout>
</LinearLayout>